use javaexec task to use the same Java version as Gradle uses